@@ -20,7 +20,6 @@ package org.apache.pinot.common.utils.fetcher;
 
 import java.io.File;
 import java.net.URI;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,6 +47,7 @@ public class SegmentFetcherFactory {
   private static final Logger LOGGER = LoggerFactory.getLogger(SegmentFetcherFactory.class);
   private static final Map<String, SegmentFetcher> SEGMENT_FETCHER_MAP = new HashMap<>();
   private static final SegmentFetcher HTTP_SEGMENT_FETCHER = new HttpSegmentFetcher();
+  private static final SegmentFetcher HTTPS_SEGMENT_FETCHER = new HttpsSegmentFetcher();
   private static final SegmentFetcher PINOT_FS_SEGMENT_FETCHER = new PinotFSSegmentFetcher();
 
   /**
@@ -56,9 +56,10 @@ public class SegmentFetcherFactory {
   public static void init(PinotConfiguration config)
       throws Exception {
     HTTP_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
+    HTTPS_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
     PINOT_FS_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
 
-    List<String> protocols = config.getProperty(PROTOCOLS_KEY, Collections.emptyList());
+    List<String> protocols = config.getProperty(PROTOCOLS_KEY, List.of());
     for (String protocol : protocols) {
       String segmentFetcherClassName = config.getProperty(protocol + SEGMENT_FETCHER_CLASS_KEY_SUFFIX);
       SegmentFetcher segmentFetcher;
@@ -98,7 +99,8 @@ public class SegmentFetcherFactory {
 
   /**
    * Returns the segment fetcher associated with the given protocol, or the default segment fetcher
-   * ({@link HttpSegmentFetcher} for "http" and "https", {@link PinotFSSegmentFetcher} for other protocols).
+   * ({@link HttpSegmentFetcher} for "http", {@link HttpsSegmentFetcher} for "https",
+   * {@link PinotFSSegmentFetcher} for other protocols).
    */
   public static SegmentFetcher getSegmentFetcher(String protocol) {
     SegmentFetcher segmentFetcher = SEGMENT_FETCHER_MAP.get(protocol);
@@ -111,8 +113,9 @@ public class SegmentFetcherFactory {
       }
       switch (protocol) {
         case CommonConstants.HTTP_PROTOCOL:
-        case CommonConstants.HTTPS_PROTOCOL:
           return HTTP_SEGMENT_FETCHER;
+        case CommonConstants.HTTPS_PROTOCOL:
+          return HTTPS_SEGMENT_FETCHER;
         default:
           return PINOT_FS_SEGMENT_FETCHER;
       }
