@@ -20,7 +20,6 @@ package org.apache.pinot.controller.helix.core.minion;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -210,8 +209,8 @@ public class PinotTaskManagerStatelessTest extends ControllerTest {
 
     // Test scheduled task creation - should limit to maxSubTasks
     TaskSchedulingContext context = new TaskSchedulingContext()
-        .setTablesToSchedule(Collections.singleton(TABLE_NAME_WITH_TYPE))
-        .setTasksToSchedule(Collections.singleton(taskType));
+        .setTablesToSchedule(Set.of(TABLE_NAME_WITH_TYPE))
+        .setTasksToSchedule(Set.of(taskType));
 
     Map<String, TaskSchedulingInfo> result = taskManager.scheduleTasks(context);
 
@@ -290,7 +289,7 @@ public class PinotTaskManagerStatelessTest extends ControllerTest {
     // Test scheduled task creation for both tables - should limit total to maxSubTasks across all tables
     TaskSchedulingContext context = new TaskSchedulingContext()
         .setTablesToSchedule(Set.of(tableNameWithType1, tableNameWithType2))
-        .setTasksToSchedule(Collections.singleton(taskType));
+        .setTasksToSchedule(Set.of(taskType));
 
     Map<String, TaskSchedulingInfo> result = taskManager.scheduleTasks(context);
 
@@ -381,8 +380,8 @@ public class PinotTaskManagerStatelessTest extends ControllerTest {
     testValidateTaskGeneration(taskManager -> {
       String taskName = "SegmentGenerationAndPushTask";
       TaskSchedulingContext context = new TaskSchedulingContext()
-          .setTablesToSchedule(Collections.singleton(TABLE_NAME_WITH_TYPE))
-          .setTasksToSchedule(Collections.singleton(taskName));
+          .setTablesToSchedule(Set.of(TABLE_NAME_WITH_TYPE))
+          .setTasksToSchedule(Set.of(taskName));
       // Validate schedule tasks for table when task queue is in stopped state
       TaskSchedulingInfo info = taskManager.scheduleTasks(context).get(taskName);
       assertNotNull(info);
