@@ -20,7 +20,6 @@ package org.apache.pinot.core.query.reduce;
 
 import com.google.common.base.Preconditions;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -41,6 +40,7 @@ import org.apache.pinot.core.query.aggregation.function.CountAggregationFunction
 import org.apache.pinot.core.query.aggregation.groupby.GroupByResultHolder;
 import org.apache.pinot.core.query.request.context.QueryContext;
 import org.apache.pinot.core.util.GapfillUtils;
+import org.apache.pinot.spi.exception.BadQueryRequestException;
 
 
 /**
@@ -74,7 +74,7 @@ public class GapfillProcessor extends BaseGapfillProcessor {
 
     DataSchema resultTableSchema = getResultTableDataSchema(dataSchema);
     if (brokerResponseNative.getResultTable().getRows().isEmpty()) {
-      brokerResponseNative.setResultTable(new ResultTable(resultTableSchema, Collections.emptyList()));
+      brokerResponseNative.setResultTable(new ResultTable(resultTableSchema, List.of()));
       return;
     }
 
@@ -89,7 +89,12 @@ public class GapfillProcessor extends BaseGapfillProcessor {
 
     // The first one argument of timeSeries is time column. The left ones are defining entity.
     for (ExpressionContext entityColum : _timeSeries) {
-      int index = indexes.get(entityColum.getIdentifier());
+      String colName = entityColum.getIdentifier();
+      Integer index = indexes.get(colName);
+      if (index == null) {
+        throw new BadQueryRequestException(
+            "TIMESERIESON column '" + colName + "' is not present in the SELECT list");
+      }
       _isGroupBySelections[index] = true;
     }
 
