@@ -19,7 +19,6 @@
 package org.apache.pinot.calcite.rel.rules;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
@@ -43,6 +42,7 @@ import org.apache.calcite.rex.RexNode;
 import org.apache.calcite.sql.SqlKind;
 import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.tools.RelBuilderFactory;
+import org.apache.pinot.calcite.rel.hint.PinotHintOptions;
 import org.apache.pinot.calcite.rel.logical.PinotLogicalExchange;
 import org.apache.pinot.calcite.rel.logical.PinotLogicalSortExchange;
 
@@ -119,11 +119,12 @@ public class PinotWindowExchangeNodeInsertRule extends RelOptRule {
       // Assess whether this is a PARTITION BY only query or not (includes queries of the type where PARTITION BY and
       // ORDER BY key(s) are the same)
       boolean isPartitionByOnly = isPartitionByOnlyQuery(windowGroup);
-
+      // Force pre-partitioned exchange when 'is_partitioned_by_window_keys' hint is provided
+      Boolean prePartitioned = PinotHintOptions.WindowHintOptions.isPartitionedByWindowKeys(window);
       if (isPartitionByOnly) {
         // Only PARTITION BY or PARTITION BY and ORDER BY on the same key(s)
         // Add an Exchange hashed on the partition by keys
-        exchange = PinotLogicalExchange.create(input, RelDistributions.hash(windowGroup.keys.toList()));
+        exchange = PinotLogicalExchange.create(input, RelDistributions.hash(windowGroup.keys.toList()), prePartitioned);
       } else {
         // PARTITION BY and ORDER BY on different key(s)
         // Add a LogicalSortExchange hashed on the partition by keys and collation based on order by keys
@@ -132,7 +133,7 @@ public class PinotWindowExchangeNodeInsertRule extends RelOptRule {
         //       sorting on the receiver side can be a no-op. Add support for this hint and pass it on. Until sender
         //       side sorting is implemented, setting this hint will throw an error on execution.
         exchange = PinotLogicalSortExchange.create(input, RelDistributions.hash(windowGroup.keys.toList()),
-            windowGroup.orderKeys, false, true);
+            windowGroup.orderKeys, false, true, prePartitioned);
       }
     }
     // NOTE: Need to create a new LogicalWindow to use the modified window group.
@@ -178,9 +179,9 @@ public class PinotWindowExchangeNodeInsertRule extends RelOptRule {
     RexBuilder rexBuilder = cluster.getRexBuilder();
 
     // Construct the project that goes below the window (which projects a literal)
-    final List<RexNode> expsForProjectBelowWindow = Collections.singletonList(
+    final List<RexNode> expsForProjectBelowWindow = List.of(
         rexBuilder.makeLiteral(0, cluster.getTypeFactory().createSqlType(SqlTypeName.INTEGER)));
-    final List<String> expsFieldNamesBelowWindow = Collections.singletonList("winLiteral");
+    final List<String> expsFieldNamesBelowWindow = List.of("winLiteral");
     Project projectBelowWindow =
         LogicalProject.create(project.getInput(), project.getHints(), expsForProjectBelowWindow,
             expsFieldNamesBelowWindow);
@@ -193,7 +194,7 @@ public class PinotWindowExchangeNodeInsertRule extends RelOptRule {
     // This scenario is only possible for empty OVER() which uses functions that have no arguments such as COUNT(*) or
     // ROW_NUMBER(). Add an Exchange with empty hash distribution list
     PinotLogicalExchange exchange =
-        PinotLogicalExchange.create(projectBelowWindow, RelDistributions.hash(Collections.emptyList()));
+        PinotLogicalExchange.create(projectBelowWindow, RelDistributions.hash(List.of()));
     Window newWindow = new LogicalWindow(window.getCluster(), window.getTraitSet(), exchange, window.getConstants(),
         outputBuilder.build(), window.groups);
 
