@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.tools;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -31,7 +30,7 @@ import org.apache.pinot.spi.plugin.PluginManager;
 public class AuthZkBasicQuickstart extends Quickstart {
   @Override
   public List<String> types() {
-    return Collections.singletonList("AUTH-ZK");
+    return List.of("AUTH-ZK");
   }
 
   @Override
