@@ -22,7 +22,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -300,7 +299,7 @@ public class QuickstartRunner {
 
   public JsonNode runQuery(String query)
       throws Exception {
-    return runQuery(query, Collections.emptyMap());
+    return runQuery(query, Map.of());
   }
 
   public JsonNode runQuery(String query, Map<String, String> additionalOptions)
